--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
 
             <div class="d-flex mr-4 slidecontainer">
                 <span class="mx-2 cyan-text" id="speed-slider-text">Speed </span>
-                <span class="mx-1 text-default" id="speed-slider-text">5 </span>
-                <input type="range" min="5" max="50" value="10" class="slider" id="speed">
-                <span class="mx-1 text-default" id="speed-slider-text">50 </span>
+                <span class="mx-1 text-default" id="speed-slider-text">faster </span>
+                <input type="range" min="0.5" max="500" value="10" class="slider" id="speed">
+                <span class="mx-1 text-default" id="speed-slider-text">slower </span>
             </div>
 
             <div class="d-flex mr-4 slidecontainer">
                 <span class="mx-2" id="data-slider-text">Data</span>
-                <span class="mx-1 text-default" id="speed-slider-text">50 </span>
-                <input type="range" min="50" max="500" value="100" class="slider" id="data">
-                <span class="mx-1 text-default" id="speed-slider-text">500 </span>
+                <span class="mx-1 text-default" id="speed-slider-text">20 </span>
+                <input type="range" min="20" max="100" value="50" class="slider" id="data">
+                <span class="mx-1 text-default" id="speed-slider-text">100 </span>
             </div>
             <button class="btn btn-outline-secondary mr-4 my-2 my-sm-0 shuffle" type="submit">Shuffle</button>
             <button class="btn btn-outline-success mr-4 my-2 my-sm-0 run" type="submit">Run</button>
@@ -82,6 +82,7 @@
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="helper.js"></script>
     <script type="text/javascript" src="selection_sort.js"></script>
+    <script type="text/javascript" src="insertion_sort.js"></script>
 
 </body>
 
