add merge sort and animation

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <script type="text/javascript" src="helper.js"></script>
     <script type="text/javascript" src="selection_sort.js"></script>
     <script type="text/javascript" src="insertion_sort.js"></script>
+    <script type="text/javascript" src="merge_sort.js"></script>
 
 </body>
 
