--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     <script type="text/javascript" src="selection_sort.js"></script>
     <script type="text/javascript" src="insertion_sort.js"></script>
     <script type="text/javascript" src="merge_sort.js"></script>
+    <script type="text/javascript" src="quick_sort.js"></script>
 
 </body>
 
