--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <option value="2">Insertion Sort</option>
                 <option value="3">Merge Sort</option>
                 <option value="4">Quick Sort</option>
+                <option value="5">Heap Sort</option>
 
             </select>
         </div>
