Organized scripts. Created Dockerfile and Jenkinsfile. Updated .gitignore.

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
     <!-- Note that add jQuery at the bottom is a good idea,
     so that we only manipulate HTML after they've been loaded and rendered-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="helper.js"></script>
-    <script type="text/javascript" src="priorty_queue.js"></script>
-    <script type="text/javascript" src="selection_sort.js"></script>
-    <script type="text/javascript" src="insertion_sort.js"></script>
-    <script type="text/javascript" src="merge_sort.js"></script>
-    <script type="text/javascript" src="quick_sort.js"></script>
+    <script type="text/javascript" src="utils/helper.js"></script>
+    <script type="text/javascript" src="utils/priorty_queue.js"></script>
+    <script type="text/javascript" src="utils/selection_sort.js"></script>
+    <script type="text/javascript" src="utils/insertion_sort.js"></script>
+    <script type="text/javascript" src="utils/merge_sort.js"></script>
+    <script type="text/javascript" src="utils/quick_sort.js"></script>
     <script type="text/javascript" src="index.js"></script>
 </body>
 
